# apps/api/src/main/java/vn/edu/ctu/saas/application/TaskPriority.java
@@ -1,0 +1,9 @@
+package vn.edu.ctu.saas.application;
+
+public enum TaskPriority {
+    LOW,
+    MEDIUM,
+    HIGH,
+    URGENT
+}
+
